; ModuleID = '/home/carl/AnghaBench/kphp-kdb/search/extr_search-x-data.c_item_clear_wordlist.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/search/extr_search-x-data.c_item_clear_wordlist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.item = type { %struct.tree* }
%struct.tree = type { i32, %struct.tree* }

@Root = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.item*)* @item_clear_wordlist to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @item_clear_wordlist(%struct.item* %0) #0 {
  %2 = alloca %struct.item*, align 8
  %3 = alloca %struct.tree*, align 8
  %4 = alloca %struct.tree*, align 8
  store %struct.item* %0, %struct.item** %2, align 8
  %5 = load %struct.item*, %struct.item** %2, align 8
  %6 = getelementptr inbounds %struct.item, %struct.item* %5, i32 0, i32 0
  %7 = load %struct.tree*, %struct.tree** %6, align 8
  store %struct.tree* %7, %struct.tree** %3, align 8
  br label %8

8:                                                ; preds = %11, %1
  %9 = load %struct.tree*, %struct.tree** %3, align 8
  %10 = icmp ne %struct.tree* %9, null
  br i1 %10, label %11, label %22

11:                                               ; preds = %8
  %12 = load %struct.tree*, %struct.tree** %3, align 8
  %13 = getelementptr inbounds %struct.tree, %struct.tree* %12, i32 0, i32 1
  %14 = load %struct.tree*, %struct.tree** %13, align 8
  store %struct.tree* %14, %struct.tree** %4, align 8
  %15 = load i32, i32* @Root, align 4
  %16 = load %struct.tree*, %struct.tree** %3, align 8
  %17 = getelementptr inbounds %struct.tree, %struct.tree* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = load %struct.item*, %struct.item** %2, align 8
  %20 = call i32 @tree_delete(i32 %15, i32 %18, %struct.item* %19)
  store i32 %20, i32* @Root, align 4
  %21 = load %struct.tree*, %struct.tree** %4, align 8
  store %struct.tree* %21, %struct.tree** %3, align 8
  br label %8

22:                                               ; preds = %8
  %23 = load %struct.item*, %struct.item** %2, align 8
  %24 = getelementptr inbounds %struct.item, %struct.item* %23, i32 0, i32 0
  store %struct.tree* null, %struct.tree** %24, align 8
  ret void
}

declare dso_local i32 @tree_delete(i32, i32, %struct.item*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
